--- a/conf/application.conf
+++ b/conf/application.conf
@@ -144,6 +144,11 @@ play.http {
     # Sets the cookie to be accessed only by the server.
     #httpOnly = true
   }
+
+  parser {
+    maxDiskBuffer=102400K
+    maxMemoryBuffer=102400K
+  }
 }
 
 ## Netty Provider
@@ -214,7 +219,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  # enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -231,7 +236,7 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    #allowedOrigins = ["http://www.example.com"]
+    allowedOrigins = null
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
@@ -347,3 +352,4 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
